--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       <div class="row">
         <div class="col">
           <p style="font-size: larger ; ">Criada através da junção de tradições e ideologias, nosso ambiente moderno
-            agrega toda nossa cultura Street e Neo Tradicional! Trazendo uma revolução de estilo entre navalhas e
-            toalhas quentes! Venha nos conhecer! <br><br>
+            agrega toda nossa cultura Street e Neo Tradicional! Trazendo uma revolução de estilo entre navalhas e b
+            toalhas quentes! Venha nos <br> conhecer! <br><br>
             Buscamos oferecer um serviço de qualidade e a nossa intenção é a de resgatar a cultura clássica das barbearias, criando um ambiente descontraído e elegante para você dar um trato no visual e fazer amizades. Como nos velhos tempos.</p>
 
         </div>
